--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="sec1">
             <div class="headerSec1">
                 <h1 class="title">Criptografia</h1>
-                <p class="paragraph"> Digite qualquer texto e ele será criptografado, de acordo com a <span style="font-weight: bold; color: #00FF41;">sua posição númerica.</span></p>        
+                <p class="paragraph" style="text-align: center;"> Digite qualquer texto e ele será criptografado, de acordo com a <span style="font-weight: bold; color: #00FF41;">sua posição númerica.</span></p>        
             </div>
             <div class="bodySec1">
                 <div>
